--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ android:
 #    - sys-img-armeabi-v7a-android-21
 
 script:
-  - ./gradlew build
+#  - ./gradlew build
+  - ./gradlew assembleRelease crashlyticsUploadDistributionRelease
 
 
