--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ android:
 
 script:
 #  - ./gradlew build
-  - ./gradlew assembleRelease crashlyticsUploadDistributionRelease
+  - ./gradlew --debug --stacktrace assembleRelease crashlyticsUploadDistributionRelease
