--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,18 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
+            def gitBranch = "git rev-parse --abbrev-ref HEAD".execute().text.trim()
+            def gitHash = "git rev-parse --short HEAD".execute().text.trim()
+            def gitCommitCounter = "git rev-list HEAD --count".execute().text.trim()
+
     defaultConfig {
         applicationId "talkware.com.demo"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 2
         versionName "1.02"
+        
+        println '!!!!!!!! Branch: ${gitBranch}, Hash: ${gitHash}, Counter: ${gitCommitCounter}'
     }
 
     signingConfigs {
