--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,16 @@ env:
 
 android:
   components:
-    - android-22
-    - build-tools-22.0.1
-    - extra-android-support
-    - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
+  - tools
+  - android-23
+  - build-tools-23.0.3
+  - extra-android-support
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
 
 script:
-  - ./gradlew build
-  - ./gradlew --debug --stacktrace assembleRelease crashlyticsUploadDistributionRelease
-  - ./gradlew assembleRelease crashlyticsUploadDistributionRelease
+  - ./gradlew assembleRelease
+#  - ./gradlew --debug --stacktrace assembleRelease crashlyticsUploadDistributionRelease
+#  - ./gradlew assembleRelease crashlyticsUploadDistributionRelease
 #  - echo TEST
