--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
             def gitBranch = "git rev-parse --abbrev-ref HEAD".execute().text.trim()
             def gitHash = "git rev-parse --short HEAD".execute().text.trim()
@@ -12,8 +12,8 @@ android {
 
     defaultConfig {
         applicationId "talkware.com.demo"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion 16
+        targetSdkVersion 23
         versionCode 2
         versionName "1.02"
         
@@ -46,6 +46,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
